# 2-Lidars-Scan-Merge

./: README.md
my_bot/: CMakeLists.txt  ignore_lidar_values.py  package.xml  setup.py
my_bot/config/: costmap.rviz  laser_scan.rviz  mapper_params_online_async.yaml
my_bot/description/: lidar.xacro  robot_core.xacro
my_bot/launch/: display_my_bot.launch.py  launch_sim.launch.py  scan_merger_launch.py
my_bot/scripts/: ignore_lidar_values.py
my_bot/worlds/: 2lidar.world
scan_merger_custom/: package.xml  setup.cfg  setup.py
scan_merger_custom/launch/: scan_merger_launch.py
scan_merger_custom/scan_merger_custom/: merge_scans.py
